@@ -3,6 +3,7 @@ import entities.User;
 import java.io.*;
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.List;
 import java.util.Objects;
 
 public class UserDataAccess implements UserDataAccessInterface{
@@ -14,22 +15,23 @@ public class UserDataAccess implements UserDataAccessInterface{
     static String defaultUserID = "00000001";
     static String defaultPetID = "00000001";
     static String defaultReportCount = "0$0$0";
-    static String filename = "userData";
+    static String filename = "src/main/java/data/userData";
     @Override
     public User getUserById(String id) throws IOException {
         FileReader fr = new FileReader(filename);
         BufferedReader br = new BufferedReader(fr);
         String line;
-        ArrayList<String> value = null;
-        while((line = br.readLine()) != null){
-            value.addAll(Arrays.asList(line.split(",")));
+        ArrayList<String> value = new ArrayList<String>();
+        while ((line = br.readLine()) != null) {
+            String[] a = line.split(",");
+            value.addAll(List.of(a));
         }
         br.close();
         fr.close();
         int i = 0;
-        while (i + 5 <= value.size()){
-            if (Objects.equals(value.get(i), id)){
-                return new User(id, value.get(i + 1), value.get(i + 2), value.get(i+3), value.get(i+4));
+        while (i + 5 <= value.size()) {
+            if (Objects.equals(value.get(i), id)) {
+                return new User(id, value.get(i + 1), value.get(i + 2), value.get(i + 3), value.get(i + 4));
             }
             i += 5;
         }
@@ -41,7 +43,7 @@ public class UserDataAccess implements UserDataAccessInterface{
         FileReader fr = new FileReader(filename);
         BufferedReader br = new BufferedReader(fr);
         String line;
-        ArrayList<String> value = null;
+        ArrayList<String> value = new ArrayList<String>();
         while((line = br.readLine()) != null){
             value.addAll(Arrays.asList(line.split(",")));
         }
@@ -62,7 +64,7 @@ public class UserDataAccess implements UserDataAccessInterface{
         FileReader fr = new FileReader(filename);
         BufferedReader br = new BufferedReader(fr);
         String line;
-        ArrayList<String> value = null;
+        ArrayList<String> value = new ArrayList<String>();
         while((line = br.readLine()) != null){
             value.addAll(Arrays.asList(line.split(",")));
         }
@@ -96,13 +98,13 @@ public class UserDataAccess implements UserDataAccessInterface{
         FileReader fr = new FileReader(filename);
         BufferedReader br = new BufferedReader(fr);
         String line;
-        ArrayList<String> value = null;
+        ArrayList<String> value = new ArrayList<String>();
         while((line = br.readLine()) != null){
             value.addAll(Arrays.asList(line.split(",")));
         }
         br.close();
         fr.close();
-        return value!= null && value.contains(username);
+        return value.contains(username);
     }
 
     @Override
@@ -110,7 +112,7 @@ public class UserDataAccess implements UserDataAccessInterface{
         FileReader fr = new FileReader(filename);
         BufferedReader br = new BufferedReader(fr);
         String line;
-        ArrayList<String> value = null;
+        ArrayList<String> value = new ArrayList<String>();
         while((line = br.readLine()) != null){
             value.addAll(Arrays.asList(line.split(",")));
         }
@@ -118,7 +120,7 @@ public class UserDataAccess implements UserDataAccessInterface{
         fr.close();
         int i = 3;
         while (i + 2 <= value.size()){
-            if (Arrays.asList(value.get(i).split("$")).contains(petID)){
+            if (Arrays.asList(value.get(i).split("\\$")).contains(petID)){
                 return new User(value.get(i-3), value.get(i-2), value.get(i-1), value.get(i), value.get(i+1));
             }
             i += 5;
@@ -131,7 +133,7 @@ public class UserDataAccess implements UserDataAccessInterface{
         FileReader fr = new FileReader(filename);
         BufferedReader br = new BufferedReader(fr);
         String line;
-        ArrayList<String> value = null;
+        ArrayList<String> value = new ArrayList<String>();
         while((line = br.readLine()) != null){
             value.addAll(Arrays.asList(line.split(",")));
         }
